# VideoJudge

./: CMakeLists.txt  main.cpp
devices/camera/: mv_video_capture.hpp
